# nail-polish-picker

./: .env.example  .gitignore  .tauriignore  README.md  TAURI_DESKTOP_GUIDE.md  index.html  package-lock.json  package.json  script.js  styles.css  vercel.json
js/: collection-manager.js  combinations-manager.js  data-manager.js  legacy-functions.js  main.js  modal-manager.js  photo-manager.js  polish-manager.js  polish-picker.js  settings-manager.js  tab-navigation.js  topper-manager.js
public/: index.html
src/: App.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Calendar.js  Collection.js  Combinations.js  Header.js  Login.js  Modal.js  PolishPicker.js  Settings.js  StarRating.js  SwatchBook.js  TabNavigation.js  UserBar.js
src/context/: AuthContext.js  DataContext.js  ModalContext.js
src/firebase/: auth.js  config.js  firestore.js  storage.js
src/styles/: base.css  buttons.css  calendar.css  cards.css  dropdown.css  forms.css  login.css  modals.css  navigation.css  swatchbook.css
